syntax = "proto3";
package model;
option go_package="model";


message Empty {
}

message Decimal64 {
    sfixed64 mantissa = 1;
    sfixed32 exponent = 2;
}


message Timestamp {
  int64 seconds = 1;
  int32 nanoseconds =2; 
}

message Money {
    Decimal64 amount = 1;
    string currency = 2;              // USD, EUR, etc.
}

message Percentage {
    Decimal64 value = 1;              // e.g., 5.5 for 5.5%
    string description = 2;           // "Annual return", "Cap rate", etc.
}

message Address {
    string street_address = 1;
    string city = 2;
    string state = 3;
    string country = 4;
    string zip_code = 5;
}

message PhoneNumber {
    string country_code = 1;          // +1, +44, etc.
    string number = 2;                // 555-123-4567
}

message Email {
    string address = 1;
    bool verified = 2;                // Email verification status
    Timestamp verified_at = 3;        // When email was verified
}